static/css/messynotes.css
@import url('https://fonts.googleapis.com/css2?family=Anek+Malayalam:wght@400;600&family=Kalam&family=Source+Code+Pro:wght@500&display=swap');

/*
 * Global variables
 */
:root {
    /* Fonts */
    --sans-serif: 'Anek Malayalam', sans-serif;
    --cursive: 'Kalam', cursive;
    --monospace: 'Source Code Pro', monospace;
    --serif: serif;
    --nav-display: grid;
    --footer-display: block;
}


/*
 * Magical dark and light mode via variable colors
 */
@media (prefers-color-scheme: light) {
    :root {
        --bg: white;
        --fg: black;
        --link: blue;
    }
}

@media (prefers-color-scheme: dark) {
    :root {
        --bg: #212124;
        --fg: white;
        --link: #0080FF;
    }
}

@media print {
    :root {
        --bg: white;
        --fg: black;
        --link: blue;
        --nav-display: none;
        --footer-display: none;
    }

    body {
        margin: 1em 5em 1em 5em;
    }

    div#singleMetadata {
        display: none;
    }
}

/*
 * Generic  modifiers
 */
.small {
    font-size: 0.75em;
}
.big {
    font-size: 1.25em;
}

/*
 * High-level tags
 */
body {
    font-family: var(--serif);
    background-color: var(--bg);
    color: var(--fg);
}
h1 {
    text-align: center;
    font-family: var(--sans-serif);
}
h2,h3,h4 {
    font-family: var(--sans-serif);
}
time {
    font-family: var(--sans-serif);
}
blockquote {
    font-family: var(--cursive);
}
code {
    font-family: var(--monospace);
}
a {
    color: var(--link);
}
a:visited {
    color: var(--link);
}

table {
    border: 1px solid var(--fg);
    border-collapse: collapse;
}
th {
    padding: .5em;
    background-color: #d9d9d9;
}
td,th {
    padding: .25em;
}
tr:nth-child(even) {
    background-color: #f2f2f2;
}

/* navigation */
nav#topNav {
    width: 100%;
    margin: 2em;
    display: var(--nav-display);
    grid-auto-flow: column;
}
a.navLink {
    grid-column-start: auto;
    grid-column-end: span 1;
    text-decoration: none;
    text-align: center;
    font-size: 2em;
    font-weight: bold;
    font-family: var(--sans-serif);
}

/* footer */

div.footer {
    margin-top: 1em;
    font-weight: bold;
    font-family: var(--sans-serif);
    width: 100%;
    text-align: center;
    display: var(--footer-display);
}


/* grid box layout for index */
div.maincontainer {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
}
h1.title {
    grid-column-start: 1;
    grid-column-end: -1;
}
h2.boxtitle {
    text-align: center;
}
div.box {
    grid-column-start: auto;
    grid-column-end: span 1;
}
a.title {
    text-decoration: none;
    font-size: 1.5em;
    font-weight: bold;
    font-family: var(--sans-serif);
}
ul.tags {
    list-style-type: none;
    margin: 0.3em 0 0 0;
    padding: 0;
    overflow: hidden;
}
li.tag {
    float: left;
    padding-right: 1em;
    font-family: var(--monospace);
}
ul.cats {
    list-style-type: none;
    margin-left: 0;
    padding-left: 0;
    font-family
}
ul.cats li {
    margin-left: 0;
    padding-left: 0;
}
li.tag:a {
    text-decoration: none;
}
div.item {
    border: 1px solid var(--fg);
    border-radius: 1em;
    margin: 1em 2em 1em 2em;
    padding: 1em;
}
div.tagContainer {
    margin: 2em;
    display: grid;
    grid-template-columns: repeat(8, 1fr);
}
div.indexTagContainer {
    margin: 2em;
    display: grid;
    grid-template-columns: repeat(4, 1fr);
}
div.tagItem {
    grid-column-start: auto;
    grid-column-end: span 1;
    margin: 1em;
    padding: 0.2em;
    text-align: center;
}
div.tagItem a {
    padding: 0 auto 0 auto;
}

/* control bar */
div.controls {
    grid-column-start: 1;
    grid-column-end: span 2;
    text-align: right;
    margin: 0 2em 0 2em;
}
div.control {
    text-align: center;
}
p.controlLabel {
    font-family: var(--sans-serif);
}

/* toggle switch(es) */
label.switch {
    position: relative;
    display: inline-block;
    width: 60px;
    height: 34px;
}
label.switch input {
    opacity: 0;
    width: 0;
    height: 0;
}
span.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    /* TODO: handle darkmode */
    background-color: #ccc;
    transition: .4s;
    border-radius: 34px;
}

span.slider:before {
    position: absolute;
    content: "";
    height: 26px;
    width: 26px;
    left: 4px;
    bottom: 4px;
    background-color: white;
    transition: .4s;
    border-radius: 50%;
}

label.switch input:checked + .slider {
    /* TODO darkmode */
    background-color: #2196F3;
}

label.switch input:focus + .slider {
    box-shadow: 0 0 1px #2196F3;
}

label.switch input:checked + .slider:before {
    transform: translateX(26px);
}

/* private stuff */
.private {
    display: none;
}

/* single display */
div#singleContent {
    padding-top: 2em;
}

/* table of contents */
nav#TableOfContents {
    border: 1px solid  var(--fg);
    border-radius: 0.5em;
}
nav#TableOfContents ul {
}

